<resources>
    <string name="app_name">Secret Hitler Online</string>
    <string name="create_button">Create New Game</string>
    <string name="join_button">Join Game</string>
    <string name="exit_button">Exit</string>
    <string name="username_field">Username</string>
    <string name="password_field">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="localhost">http://135fac166985.ngrok.io</string>
    <string name="loginError">login failed</string>
    <string name="RegisterError">register failed</string>
    <string name="number_of_players_hint">Enter number of players</string>
    <string name="players_warning">* Number of Players Should be at Least 5 and Maximum 10</string>
    <string name="create_game_error">failed</string>
    <string name="join_url">Join URL: </string>
    <string name="players_to_go">Players to Start: </string>
    <string name="ws_host">ws://135fac166985.ngrok.io</string>
    <string name="wait_text">Waiting for Other Players to Join…</string>
    <string name="draw_pile">Draw:</string>
    <string name="discard_pile">Discard:</string>
    <string name="president">President:</string>
    <string name="chanc">Chancellor:</string>
    <string name="election_tracker">Election Tracker:</string>
    <string name="pick_chancellor">Waiting for President to Pick a Chancellor</string>
</resources>
